test/fail/jvm_retvar00.v3
//@execute 0=0; 1=0; 2=0
class A {
	def r() -> (A, A) { return (A.new(), A.new()); }
}
class B extends A {
	def r() -> (B, B) { return (B.new(), B.new()); }
}

def main(arg: int) -> int {
	var o = if(arg == 0, A.new(), B.new());
	var r = o.r();
	return if(r.0 == r.1, 1, 0);
}
